removed og:image tag

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,10 @@
             content="Digital Invitation Card for Lateef's Engagement with two 
             languages support developed by Ziya Invites"
         />
-        <meta
+        <!-- <meta
             property="og:image"
             content="<%= require('./assets/images/favicon.png') %>"
-        />
+        /> -->
 
         <!-- Bootstrap CSS -->
         <link
