added all og tag

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Digital Invitation Card for Lateef's Engagement with two 
-            languages support developed by Ziya Invites"
+            content="Digital Invitation Card for Lateef's Engagement with two languages support developed by Ziya Invites"
         />
 
         <!-- Favicon Links -->
@@ -22,7 +21,7 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
         <!-- Facebook Meta tags -->
-        <!-- <meta
+        <meta
             property="og:url"
             content="https://lateef-enagagement.netlify.app/"
         />
@@ -35,8 +34,8 @@
         />
         <meta
             property="og:image"
-            content="<%= require('./assets/images/favicon.png') %>"
-        /> -->
+            content="https://drive.google.com/file/d/1F3I7tQ03Xm1tTYovJTsOLbT0a6fUZO6u/view?usp=sharing"
+        />
 
         <!-- Bootstrap CSS -->
         <link
