added all og tag

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         />
         <meta
             property="og:image"
-            content="https://drive.google.com/file/d/1F3I7tQ03Xm1tTYovJTsOLbT0a6fUZO6u/view?usp=sharing"
+            content="<%= require('./assets/images/favicon.png') %>"
         />
 
         <!-- Bootstrap CSS -->
