added Authot Tag

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
             name="description"
             content="Digital Invitation Card for Lateef's Engagement with two languages support developed by Ziya Invites"
         />
+        <meta name="author" content="Ziauddin Ziya">
 
         <!-- Favicon Links -->
         <link rel="icon" href="%PUBLIC_URL%/assets/images/favicon.ico" />
