--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
             name="description"
             content="Digital Invitation Card for Lateef's Engagement with two languages support developed by Ziya Invites"
         />
-        <meta name="author" content="Ziauddin Ziya">
+        <meta name="author" content="Ziauddin Ziya" />
+        <meta property="article:published_time" content="2022-06-02" />
+        <link rel="image_src" href="https://firebasestorage.googleapis.com/v0/b/ziya-invites-e8086.appspot.com/o/ziya-invites%2Ffavicon.png?alt=media&token=d59033cb-c4c4-4ac8-b441-848fdcecd77d" />
 
         <!-- Favicon Links -->
         <link rel="icon" href="%PUBLIC_URL%/assets/images/favicon.ico" />
@@ -35,7 +37,7 @@
         />
         <meta
             property="og:image"
-            content="<%= require('./assets/images/favicon.png') %>"
+            content="https://firebasestorage.googleapis.com/v0/b/ziya-invites-e8086.appspot.com/o/ziya-invites%2Ffavicon.png?alt=media&token=d59033cb-c4c4-4ac8-b441-848fdcecd77d"
         />
 
         <!-- Bootstrap CSS -->
